# Cursor

./: google-sheets-transfer-data.gs  google-sheets-transfer.gs  transfer_data.gs
Exposure calculator/: code.gs  sidebar.html
First Project/: .gitignore  README.md  app.py  pyproject.toml
KW_Analyzer/: .env.example  .gitignore  ADVANCED_KEYWORD_ANALYSIS.md  GOOGLE_SHEETS_SETUP.md  OPENAI_SETUP.md  README.md  requirements.txt  test_openai.py
KW_Analyzer/dashboard/: app.py
KW_Analyzer/src/: __init__.py  advanced_processor.py  apify_integration.py  config.py  data_processor.py  database.py  google_sheets.py  keyword_analyzer.py  nlp_analyzer.py  openai_nlp_analyzer.py  report_generator.py  web_scraper.py
MetaAds_library/: .gitignore  README.md  meta_api.md  pyproject.toml  run.sh
MetaAds_library/alembic/: env.py
MetaAds_library/alembic/versions/: 20260311_000001_initial_schema.py
MetaAds_library/scripts/: download_apify_video_poc.py  sample_apify_result.json
MetaAds_library/src/meta_ads/: __init__.py  __main__.py  apify_client.py  assemblyai_client.py  cli.py  config.py  db.py  dedupe.py  media.py  meta_client.py  models.py  nexos_client.py  normalize.py  pipeline.py
MetaAds_library/tests/: test_dedupe.py  test_media.py  test_meta_client.py  test_nexos_client.py  test_normalize.py  test_pipeline.py
assemblyai/: .gitignore  README.md  requirements.txt  transcribe.py  vids_guard.rtf  vids_guard_full.rtf
